--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -3,16 +3,15 @@
 layout: page
 custom-foot: js/browse-js.html
 ---
-
 {{ content }}
 
 <div class="row mb-3 justify-content-center">
     <div class="col-md-8 text-center">
         <form role="search" id="browseFilter" onsubmit="submitFilter(); return false;">
             <div class="input-group input-group-lg">
-                <input type="text" class="form-control" id="filterTextBox" placeholder="Filter ... " aria-label="Search"> 
-                <button class="btn btn-success" type="submit" title="Filter items" id="filterButton" >Search</button>
-                <button class="btn btn-outline-secondary filter" onclick="resetFilter(); return false;" data-filter="">Reset</button>
+                <input type="text" class="form-control" id="filterTextBox" placeholder="Filtrar ... " aria-label="Buscar"> 
+                <button class="btn btn-success" type="submit" title="Filter items" id="filterButton" >Buscar</button>
+                <button class="btn btn-outline-secondary filter" onclick="resetFilter(); return false;" data-filter="">Empezar</button>
             </div>
         </form>
         <div class="h2" id="numberOf"></div>
@@ -20,11 +19,11 @@ custom-foot: js/browse-js.html
     <div class="col-md-2">
         <div class="dropdown">
             <button class="btn btn-secondary mt-1 dropdown-toggle" type="button" id="browseSortButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Sort by <span id="sortFilter">Random</span>
+                Ordenar por <span id="sortFilter">Orden Aleatorio</span>
             </button>
             <div class="dropdown-menu browse-sort-menu" aria-labelledby="browseSortButton">
-                <button class="dropdown-item browse-sort-item active" data-filter="random">Random</button>
-                <button class="dropdown-item browse-sort-item" data-filter="title">Title</button>
+                <button class="dropdown-item browse-sort-item active" data-filter="random">Orden aleatorio</button>
+                <button class="dropdown-item browse-sort-item" data-filter="title">Título</button>
                 {% assign sort_options = site.data.config-browse | where_exp: 'i','i.sort_name != nil' %}
                 {% for o in sort_options %}
                 <button class="dropdown-item browse-sort-item" data-filter="{{ o.field | escape }}">{{ o.sort_name }}</button>
