--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -17,10 +17,10 @@ custom-foot: js/lunr-js.html
             <div class="modal-body">
                 <p>These advanced options can be added to your query in the search box to refine your results:</p> 
                 <ul>
-                    <li>Search a specific field: use the field name, colon, then your query, e.g. <code>title:foo</code>, <code>date:1911</code>, <code>subject:tree</code>. In this collection you can use {{ fields | join: ", " }}.</li>
-                    <li>Wildcards: add <code>*</code> to match any character(s), e.g. <code>foo*</code>, <code>*oo</code>. This is helpful for using a root to find words with all related endings.</li>
-                    <li>Fuzzy match: add <code>~</code> plus a number at the end of your query to specify a higher level of fuzziness in search, e.g. <code>foo~1</code>. This can help with misspellings.</li>
-                    <li>Boost term: add <code>^</code> plus a number to boost the relevance of a term in your query, e.g. <code>foo^10</code>. This can help reduce clutter of unrelated results if one of your terms is most important.</li>
+                <li>Campos específicos (i.e. título:casa, fecha:1911, tema:iglesia
+                <li>Wildcards (i.e. bot*, *ota)</li>
+                <li>Coincidencia difusa, para cuando no estés seguro de la ortografía (i.e. igle~ia)</li>
+                <li>Término de incremento (i.e. igle^10)</li>
                 </ul>
             </div>
         </div>
