--- a/_includes/js/map-js.html
+++ b/_includes/js/map-js.html
@@ -101,7 +101,7 @@
                 csize = 'large';
             }
             var c = ' marker-cluster-' + csize;
-            return new L.DivIcon({ html: '<div><span class="visually-hidden">' + csize +' cluster of </span><span>' + childCount + '</span><span class="visually-hidden"> items</span></div>', className: 'marker-cluster' + c, iconSize: new L.Point(40, 40) });
+            return new L.DivIcon({ html: '<div><span class="visually-hidden">' + csize +' cluster of </span><span>' + childCount + '</span><span class="visually-hidden"> objetos</span></div>', className: 'marker-cluster' + c, iconSize: new L.Point(40, 40) });
         }
         {% if site.data.theme.map-search == true %}, removeOutsideVisibleBounds: false{% endif %} 
     });{% endif %}
